<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:padding="3.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3.0dip"
        card_view:cardCornerRadius="6.0dip">
        <LinearLayout
            android:orientation="vertical"
            android:padding="6.0dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3.0dip"
                    android:textStyle="bold"
                    android:text="@string/card_phone" />
                <TextView
                    android:id="@+id/text_phone_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3.0dp"
                    android:textStyle="bold"
                    android:text="@string/card_not_checked"/>
            </LinearLayout>
            <Button
                android:id="@+id/button_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/button_check"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>