<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1.0dip">

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_margin="3.0dip"
        android:padding="3.0dip"
        card_view:cardCornerRadius="6.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="6.0dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3.0dip"
                    android:text="@string/card_device"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_device_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3.0dp"
                    android:text="@string/card_not_checked"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/button_device"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/button_check" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>